--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,25 @@
 
 <body>
   <main>
-    <h1>Vanilla JavaScript App</h1>
-  </main>
+    <h1>Static Web Apps Database Connections</h1>
+    <blockquote>
+        Open the console in the browser developer tools to see the API responses.
+    </blockquote>
+    <div>
+        <button id="list" onclick="list()">List</button>
+        <button id="get" onclick="get()">Get</button>
+        <button id="update" onclick="update()">Update</button>
+        <button id="create" onclick="create()">Create</button>
+        <button id="delete" onclick="del()">Delete</button>
+    </div>
+    <script>
+        async function list() {
+          const endpoint = '/data-api/rest/grooving';
+          const response = await fetch(endpoint);
+          const data = await response.json();
+          console.table(data.value);
+        }
+    </script>  </main>
 </body>
 
 </html>
